--- a/MVC/CIPlatform/CIPlatform/wwwroot/css/platformlandingpage.css
+++ b/MVC/CIPlatform/CIPlatform/wwwroot/css/platformlandingpage.css
@@ -14,9 +14,17 @@
 }
 
 .stories {
-    margin-left: 20%;
+    margin-left: 2%;
     font-size: large;
     color: #333333;
+}
+
+.stories1 {
+    margin-left: 6%;
+    width:auto;
+    font-size: large;
+    color: #333333;
+    border:none;
 }
 
 .dropdown-policy {
