--- a/MVC/CIPlatform/CIPlatform/wwwroot/css/platformlandingpage.css
+++ b/MVC/CIPlatform/CIPlatform/wwwroot/css/platformlandingpage.css
@@ -1,4 +1,52 @@
-﻿.entire-down-div {
+﻿.notimsg {
+    box-shadow: 3px 3px 3px grey;
+    border: 1px solid #D9D9D9;
+    border-radius: 3px;
+    height:auto;
+    width:100%;
+    padding-left:2%;
+    padding-top:2%;
+}
+.img-noti {
+    margin-top: 0.1%;
+    margin-left: 0.1%;
+    height:30px;
+    width:30px;
+}
+.form-check-input:checked {
+    background-color: #F88634;
+    border-color: #F88634;
+}
+
+.cancel-btn {
+    width: 110px;
+    height: 48px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 2px solid #757575;
+    border-radius: 24px;
+    color: #757575;
+    color: #757575;
+}
+.save-btn {
+    width: 110px;
+    height: 48px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 2px solid #F88634;
+    border-radius: 24px;
+    color: #F88634;
+    /*margin-left: 78%;*/
+}
+.notification
+{
+    margin-left:2270%;
+}
+.noti-title
+{
+    margin-top:1%;
+    text-align:center;
+    margin-left:20%;
+}
+.entire-down-div {
     margin-top: -1%;
 }
 
